--- a/config.yml
+++ b/config.yml
@@ -1,1 +1,6 @@
-example_config: "example_config_value"
+
+integration:
+  reddit:
+    client_id: 'aqdGizEnVSPqgA'
+    client_secret: '1pjYER2d72Ubx0oL5x4A_CmZGrQ'
+    user_agent: 'am-i-the-asshole-bot'
