--- a/requirements.txt
+++ b/requirements.txt
@@ -2,11 +2,15 @@ addict==2.2.1
 certifi==2019.3.9
 chardet==3.0.4
 idna==2.8
+joblib==0.13.2
+numpy==1.16.4
 praw==6.2.0
 prawcore==1.0.1
 pyaml==19.4.1
 PyYAML==5.1
 requests==2.22.0
+scikit-learn==0.21.2
+scipy==1.3.0
 six==1.12.0
 update-checker==0.16
 urllib3==1.25.3
